LandscapeIcon image does not fit the body entirely solved

--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,10 @@
 }
 
 body {
-    /*background-image: url("./img/background.jpg");*/
     font-family: 'VT323', monospace;
     background-color: #007e7d;
     padding: 0;
     margin: 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: calc(100%-35px);
 }
 
 a{
@@ -61,7 +57,6 @@ header {
     padding-left: 20px;
     padding-right: 20px;
     font-size: 20px;
-    /*continuar*/
 }
 
 /* /-> --- Screen Icons ---*/
@@ -1182,7 +1177,7 @@ footer {
 @media (max-width: 820px) {
 
     body {
-        background-color: #cc8b00;
+        /*background-color: #cc8b00;*/
     }
 
     #screen {
@@ -1309,17 +1304,7 @@ footer {
 @media (max-width: 480px) {
 
     body {
-        background-color: #221f1a;
-    }
-
-    #screen {
-        align-items: center;
-    }
-
-    #programs-window {
-        width: 100%;
-        left: 0;
-        right: 0;
+        /*background-color: #221f1a;*/
     }
 
     /*About Me Window*/
